--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,16 @@
                     </execution>
                 </executions>
             </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+        <configuration>
+            <forkCount>0</forkCount>
+            <testFailureIgnore>true</testFailureIgnore>
+        </configuration>
+        </plugin>
             <!-- CODE COVERAGE -->
             <plugin>
                 <groupId>org.jacoco</groupId>
